This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: Crash (constructed) in _PySequence_BytesToCharpArray()
Type: crash Stage: resolved
Components: Interpreter Core Versions: Python 3.2, Python 3.3
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: Nosy List: loewis, python-dev, skrah
Priority: normal Keywords: patch

Created on 2012-08-20 07:43 by skrah, last changed 2022-04-11 14:57 by admin. This issue is now closed.

Files
File name Uploaded Description Edit
bytes_to_charp_array.diff skrah, 2012-08-20 07:43 review
Messages (4)
msg168633 - (view) Author: Stefan Krah (skrah) * (Python committer) Date: 2012-08-20 07:43
Coverity found an unchecked return value in _PySequence_BytesToCharpArray().
Patch attached.


A demonstration:

import _posixsubprocess
class Z(object):
    def __len__(self):
        return 1

_posixsubprocess.fork_exec(1,Z(),3,[1, 2],5,6,7,8,9,10,11,12,13,14,15,16,17)
msg168634 - (view) Author: Martin v. Löwis (loewis) * (Python committer) Date: 2012-08-20 07:58
LGTM. Please apply to all affected branches.
msg168637 - (view) Author: Roundup Robot (python-dev) (Python triager) Date: 2012-08-20 09:19
New changeset cfddcf964ff0 by Stefan Krah in branch '3.2':
Issue #15732: Fix (constructed) crash in _PySequence_BytesToCharpArray().
http://hg.python.org/cpython/rev/cfddcf964ff0
msg168638 - (view) Author: Stefan Krah (skrah) * (Python committer) Date: 2012-08-20 09:21
Thanks for reviewing!
History
Date User Action Args
2022-04-11 14:57:34adminsetgithub: 59937
2012-08-20 09:21:34skrahsetstatus: open -> closed
versions: + Python 3.2
messages: + msg168638

resolution: fixed
stage: patch review -> resolved
2012-08-20 09:19:44python-devsetnosy: + python-dev
messages: + msg168637
2012-08-20 07:58:30loewissetnosy: + loewis
messages: + msg168634
2012-08-20 07:43:20skrahcreate