Issue #15732: Fix (constructed) crash in _PySequence_BytesToCharpArray(). Found by Coverity.